# kanfei

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  TODO.md  davis-wx.service  docker-compose.yml  kanfei.service  station.py
backend/: alembic.ini  logger_main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/api/: astronomy.py  auth.py  backgrounds.py  backup.py  config.py  current.py  db_admin.py  dependencies.py  discord_bot.py  export.py  forecast.py  history.py  logs.py  map_data.py  nowcast.py  nowcast_lite.py  output.py  public_data.py  router.py  setup.py  spray.py  station.py  telegram.py  usage.py  weatherlink.py
backend/app/ipc/: __init__.py  client.py  dependencies.py  protocol.py  server.py
backend/app/models/: archive_record.py  auth.py  database.py  forecast.py  nowcast.py  radar_threats.py  sensor_meta.py  sensor_reading.py  spray.py  station_config.py
backend/app/output/: aprs.py  metar.py
backend/app/protocol/: base.py  commands.py  constants.py  crc.py  link_driver.py  loop_packet.py  memory_map.py  serial_port.py  station_types.py
backend/app/protocol/ambient/: __init__.py  constants.py  driver.py  receiver.py  sensors.py
backend/app/protocol/ecowitt/: __init__.py  constants.py  driver.py  protocol.py  sensors.py
backend/app/protocol/tempest/: __init__.py  constants.py  driver.py  protocol.py  sensors.py
backend/app/protocol/vantage/: __init__.py  archive.py  commands.py  constants.py  driver.py  eeprom.py  loop_packet.py
backend/app/protocol/weatherlink_ip/: __init__.py  driver.py  tcp_transport.py
backend/app/protocol/weatherlink_live/: __init__.py  constants.py  driver.py  http_client.py  sensors.py
backend/app/schemas/: astronomy.py  config.py  forecast.py  sensor.py  ws.py
backend/app/services/: alerts.py  alerts_nws.py  aprs_collector.py  aprs_map_collector.py  archive_sync.py  astronomy.py  auth.py  backup.py  bot_formatting.py  bot_manager.py  bot_ratelimit.py  calculations.py  cwop.py  daily_extremes.py  discord_bot.py  forecast_blender.py  forecast_local.py  forecast_nws.py  knowledge_formatter.py  log_buffer.py  mrms_loader.py  multi_radar.py  nearby_stations.py  nexrad_loader.py  nowcast_analyst.py  nowcast_collector.py  nowcast_service.py  nowcast_verifier.py  poller.py  pressure_trend.py  radar_processor.py  radar_visualizer.py  spray_engine.py  surface_analyzer.py  telegram.py  threat_tracker.py  wunderground.py
backend/app/services/nowcast/: __init__.py  kanfei_adapters.py  (+4 more)
backend/app/utils/: units.py
backend/app/ws/: handler.py
(+200 files in other folders)
