[project]
name = "kanfei"
version = "0.1.0"
description = "Kanfei — Davis Weather Station dashboard and logger"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pyserial>=3.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "httpx>=0.25",
    "astral>=3.2",
    "pydantic-settings>=2.1",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "anthropic>=0.45",
    "numpy>=1.24",             # Radar processing, threat tracking
    "matplotlib>=3.7",         # Radar composite visualizations
    "python-telegram-bot>=22.7",  # Telegram bot integration (async, getUpdates polling)
    "discord.py>=2.0",             # Discord bot integration (async, gateway WebSocket)
    "bcrypt>=4.0",                   # Password hashing for auth
]

[project.optional-dependencies]
nexrad = [
    # NEXRAD Level II radar processing (mesocyclone/hail detection)
    "arm-pyart>=1.15.0",
    "boto3>=1.28.0",
    "scikit-learn>=1.3.0",     # DBSCAN clustering for multi-peak detection
    "Pillow>=9.0",             # Radar composite image generation
    "scipy>=1.10.0",           # Pressure isobar interpolation
    "cfgrib>=0.9.10",          # GRIB2 reading via xarray (MRMS cross-validation)
    "eccodes>=1.5.0",          # ECMWF GRIB2 C library bindings
]
openai = [
    # Fallback AI providers (Grok/xAI, OpenAI) for nowcast generation
    "openai>=1.12.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx",
]
testing = [
    # Historic event testing dependencies
    "arm-pyart>=1.15.0",      # NEXRAD Level II processing
    "xarray>=2023.0.0",        # Multi-dimensional arrays
    "netCDF4>=1.6.0",          # CWOP MADIS data (netCDF format)
    "boto3>=1.28.0",           # AWS S3 access for NEXRAD archive
    "s3fs>=2023.0.0",          # S3 filesystem interface
    "geopandas>=0.14.0",       # NWS alert shapefiles
    "shapely>=2.0.0",          # Geometric operations
    "requests>=2.31.0",        # HTTP downloads
    "pyyaml>=6.0",             # Event config files
    "scikit-learn>=1.3.0",     # DBSCAN clustering for multi-peak mesocyclone detection
    "cfgrib>=0.9.10",          # GRIB2 reading via xarray (MRMS cross-validation)
    "eccodes>=1.5.0",          # ECMWF GRIB2 C library bindings
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]
